Footer Corrections and Dark mode

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -85,7 +85,7 @@ html, body {
   height: 120vh;
   width: 100%;
   z-index: 10;
-  border-radius: 0 0 120px 120px;
+  border-radius: 0 0 90px 90px;
   box-shadow: 0px 10px 200px #000;
 }
 
